[package]
name = "adtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.67"
quote = "1.0.33"
syn = { version = "2.0.37", features = ["full", "extra-traits"] }

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }
trybuild = "1.0.85"
