[package]
name = "adtest"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/0xMimir/adtest"
authors = ["Mimir <mimirz@proton.me>"]
description = "Library for better test generation"
keywords = ["tests"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.67"
quote = "1.0.33"
syn = { version = "2.0.37", features = ["full", "extra-traits"] }

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }
trybuild = "1.0.71"
